# energy-trading-sim

./: README.md  pyproject.toml
data/: Day-ahead_pricesSMARD_202504140000_202504220000_Hour.csv
data/intradayvwap/: 14.4.25.csv  15.4.25.csv  16.4.25.csv  17.4.25.csv  18.4.25.csv  19.4.25.csv  20.4.25.csv
examples/: case-study-1.ipynb  case-study-2.ipynb  case-study-ehimare.ipynb  example.ipynb
src/: clearing.py  data.py  load_profiles.py  metrics.py  plot.py  sim.py  strategy.py
